# nn_from_scratch

./: README.md  develop.ipynb  fully_connected_mnist.ipynb  pyproject.toml
code/.ipynb_checkpoints/: utils-checkpoint.py
