[tool.poetry]
name = "nn_from_scratch"
version = "0.1.0"
description = ""
authors = ["finnkauski <iwiivi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
jupyterlab = "^2.2.9"
torch = "^1.7.0"
torchvision = "^0.8.1"
numpy = "^1.19.4"
requests = "^2.24.0"
matplotlib = "^3.3.2"
tqdm = "^4.51.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
